# github-mcp-server

./: .gitignore  DOCS.md  Dockerfile  docker-compose.yml  inspect_fastmcp_auth.py  inspect_fn_signature.py  inspect_tool.py  inspect_tools_auth.py  main.py  pyproject.toml  requirements.txt  run_mcp.bat  test_access_token.py  test_auth.py
app/: auth.py  config.py  database.py  github.py  main.py  oauth_discovery.py  schemas.py  security.py  tools.py  user_context.py  utils.py
