[project]
name = "github-mcp-server-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "authlib>=1.3.0",
    "cryptography>=42.0.0",
    "fastapi>=0.109.0",
    "fastmcp>=0.4.0",
    "greenlet>=3.0.3",
    "httpx>=0.26.0",
    "itsdangerous>=2.1.2",
    "loguru>=0.7.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.23",
    "uvicorn>=0.25.0",
]
